fix setup and language layout issues. Closes: #10297
git-svn-id: https://ut.svn.beanstalkapp.com/ngfw/work/pkgs@32226 8ebf8b4e-06f3-0310-961f-89f74618be54

--- a/untangle-apache2-config/files/var/www/skins/cammo/css/admin.css
+++ b/untangle-apache2-config/files/var/www/skins/cammo/css/admin.css
@@ -1651,3 +1651,6 @@ textarea.ua-test-output
 div.x-column-header-inner {
     text-align: center;
 }
+div.x-fieldset-header-text {
+	font-weight: bold
+}
