--- a/untangle-apache2-config/files/var/www/skins/dell-rack-amd/css/admin.css
+++ b/untangle-apache2-config/files/var/www/skins/dell-rack-amd/css/admin.css
@@ -1641,3 +1641,6 @@ textarea.ua-test-output
 div.x-column-header-inner {
     text-align: center;
 }
+div.x-fieldset-header-text {
+	font-weight: bold
+}
